[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hass-client"
version = "0.1.0"
description = "A remote-capable Home Assistant compatibility layer for running integrations outside Home Assistant."
readme = "README.md"
requires-python = ">=3.14.2"
license = { text = "Apache-2.0" }
authors = [{ name = "Paulus Schoutsen" }]
dependencies = [
  "aiohttp>=3.11.0",
  "homeassistant",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=1.3.0",
  "pytest-socket>=0.7.0",
  "freezegun>=1.5.0",
  "bcrypt>=4.0.0",
  "requests-mock>=1.12.0",
  "respx>=0.23.0",
  "syrupy>=5.0.0",
  "paho-mqtt>=2.1.0",
  "aiohasupervisor>=0.4.3",
  "ha-ffmpeg>=3.2.2",
  "pytest-freezer>=0.4.9",
  "aiohue>=4.8.1",
  "python-picnic-api2>=1.3.4",
  "pytest-unordered>=0.7.0",
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
include = ["hass_client*"]

[tool.setuptools.package-data]
hass_client = ["py.typed"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
homeassistant = { path = "../core", editable = true }
