# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
url = https://www.home-assistant.io/

[flake8]
exclude = .venv,.git,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
# B* are flake8-bugbear rules; these are temporarily disabled since the linter is new, but will be enabled over time.
#   B005: Temporarily disabled while flake8-bugbear is rolled out
#   B006: Temporarily disabled while flake8-bugbear is rolled out
#   B007: Temporarily disabled while flake8-bugbear is rolled out
#   B008: Temporarily disabled while flake8-bugbear is rolled out
#   B009: Temporarily disabled while flake8-bugbear is rolled out
#   B010: Temporarily disabled while flake8-bugbear is rolled out
#   B011: Temporarily disabled while flake8-bugbear is rolled out
#   B014: Temporarily disabled while flake8-bugbear is rolled out
#   B015: Temporarily disabled while flake8-bugbear is rolled out
#   B019: Temporarily disabled while flake8-bugbear is rolled out
#   B020: Temporarily disabled while flake8-bugbear is rolled out
#   B023: Temporarily disabled while flake8-bugbear is rolled out
#   B024: Temporarily disabled while flake8-bugbear is rolled out
#   B027: Temporarily disabled while flake8-bugbear is rolled out
# X999: a placeholder so we can have trailing commas
ignore =
    E501,
    W503,
    E203,
    D202,
    W504,
    B005,
    B006,
    B007,
    B008,
    B009,
    B010,
    B011,
    B014,
    B015,
    B019,
    B020,
    B023,
    B024,
    B027,
    X999
noqa-require-code = True
