# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Keep this file until it does!

[metadata]
url = https://www.home-assistant.io/

[flake8]
exclude = .venv,.git,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504
noqa-require-code = True

# Ignores, that are currently caused by mismatching configurations
# between ruff and flake8 configurations. Once ruff becomes permanent flake8
# will be removed, including these ignores below.
# In case we decide not to continue with ruff, we should remove these
# and probably need to clean up a couple of noqa comments.
per-file-ignores =
    homeassistant/config.py:NQA102
    tests/components/august/mocks.py:NQA102
    tests/components/tts/conftest.py:NQA102
    tests/helpers/test_icon.py:NQA102
