[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyeufysecurity"
version = "1.0.0"
description = "Python library for Eufy Security cameras and devices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Paul Tarjan", email = "github@paulisageek.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.0.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/ptarjan/pyeufysecurity"
Documentation = "https://github.com/ptarjan/pyeufysecurity#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/pyeufysecurity"]
