[tool.poetry]
name = "ha-dvsportal"
version = "0.1.0"
description = ""
authors = ["ChessSpider <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
dvsportal = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
